--- a/autostitch/index.html
+++ b/autostitch/index.html
@@ -9,7 +9,7 @@
       padding-left: 100px;  
     }  
   </style> 
-    <title>Vincent Escueta  |  CS 184</title>
+    <title>Vincent Escueta  |  CS 194-26</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
