changes about me

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
-                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California, I am a Render Technical Assistant at Industrial Light & Magic, and I graduated from the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science in December 2017. Some topics I've really enjoyed so far is Computer Graphics, Animation, VFX, and Artificial Intelligence. All my technical skills are in my résumé in the section below. Some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
+                    <p class="text-faded">I am Vincent Escueta, a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. All my technical skills are in my résumé below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
             </div>
         </div>
