--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                  <div class="col-lg-4 col-sm-6">
-                    <a href="http://uccc2018.com" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/uccc2018.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
