trying new design

--- a/index.html
+++ b/index.html
@@ -71,26 +71,39 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1>Vincent Escueta</h1>
-                <hr>
-                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
-            </div>
-        </div>
-    </header>
+#    <header>
+#        <div class="header-content">
+#            <div class="header-content-inner">
+#                <h1>Vincent Escueta</h1>
+#                <hr>
+#                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</p>
+#                <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
+#            </div>
+#        </div>
+#    </header>
 
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
+                    <h1>Vincent Escueta</h1>
+                    <h2>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h2>
+                    <hr>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
                     <p class="text-faded">I am Vincent Escueta, a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. All my technical skills are in my résumé below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    
+    
+    <section class="bg-dark" id="resume">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Download my Résumé</h2>
+                <hr class="primary">
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Download Now!</a>
             </div>
         </div>
     </section>
@@ -318,16 +331,6 @@
                         </div>
                     </a>
                 </div>  -->
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-dark" id="resume">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Download my Résumé</h2>
-                <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Download Now!</a>
             </div>
         </div>
     </section>
