--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h1>Vincent Escueta</h1>
-                    <h2>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h2>
-                    <hr>
+                    <h3>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h3>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
                     <p class="text-faded">I am Vincent Escueta, a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. All my technical skills are in my résumé below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
@@ -90,9 +89,9 @@
     <section class="bg-dark" id="resume">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Download my Résumé</h2>
+                <h2Résumé</h2>
                 <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Download Now!</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Resume</a>
             </div>
         </div>
     </section>
@@ -109,6 +108,40 @@
             </div>
         </div> -->
         <div class="container-fluid">
+            <h1>Animation</h1>
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/rory.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    Stargazing (Warning: Links to a video)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    The Generous Ghost (Warning: Links to a video)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <h1>Technical Projects</h1>
             <div class="row no-gutter">
                  <div class="col-lg-4 col-sm-6">
                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link">
@@ -229,52 +262,7 @@
                             </div>
                         </div>
                     </a>
-                </div> 
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/rory.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Animation
-                                </div>
-                                <div class="project-name">
-                                    Stargazing (Warning: Links to a video)
-                                </div>
-                            </div>
-                        </div>
-                    </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Animation
-                                </div>
-                                <div class="project-name">
-                                    The Generous Ghost (Warning: Links to a video)
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-<!--                <div class="col-lg-4 col-sm-6">
-                    <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Animation
-                                </div>
-                                <div class="project-name">
-                                    Cello Model</br> (link goes to turntable gif)
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="http://datastructur.es/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
@@ -290,6 +278,24 @@
                         </div>
                     </a>
                 </div>
+
+<!--                <div class="col-lg-4 col-sm-6">
+                    <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    Cello Model</br> (link goes to turntable gif)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div> -->
+            <div class="row no-gutter">
+                <h1>Photography<h1>
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/images.jpg" class="img-responsive" alt="">
@@ -305,21 +311,24 @@
                         </div>
                     </a>
                 </div>
-<!--                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa14/proj/scheme/" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/scheme.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="row no-gutter">
+                <h1>Graphic Design </h1>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/images.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Structure and Interpretation of Computer Programss
+                                    Design
                                 </div>
                                 <div class="project-name">
-                                    Scheme Interpreter </br> Interpreter for a subset of the Scheme language using Python. (link goes to project specifications)
+                                    Other Minor Projects</br> Images/GIFS of nametags, fliers, models, etc of other projects I worked on
                                 </div>
                             </div>
                         </div>
                     </a>
-                </div>  -->
+                </div>
             </div>
         </div>
     </section>
