--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div> -->
         <h2 class="text-center>Portfolio</h2>
-        <div class="container-fluid text-center">
+        <div class="container-fluid">
             <h3 class="text-center>Animation</h3>
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
