trying to fix it!

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     
-                    <p><a href="https://github.com/vincent-escueta22" target="_blank">GitHub<i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i></p>
+                    <p><a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     
