--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div> -->
         <div class="container-fluid">
-            <h3 class="text-center>Animation</h3>
+            <h3 class="text-center">Animation</h3>
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
@@ -127,7 +127,7 @@
                     </a>
                 </div>
             </div>
-            <h3 class="text-center>Technical</h3>
+            <h3 class="text-center">Technical</h3>
             <div class="row no-gutter">
                  <div class="col-lg-4 col-sm-6">
                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link">
@@ -252,7 +252,7 @@
             </div>
             
             <div class="row no-gutter">
-                <h3 class="text-center>Photography<h3>
+                <h3 class="text-center">Photography<h3>
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/images.jpg" class="img-responsive" alt="">
@@ -271,7 +271,7 @@
             </div>
                                                          
             <div class="row no-gutter">
-                <h3 class="text-center>Graphic Design </h3>
+                <h3 class="text-center">Graphic Design </h3>
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/images.jpg" class="img-responsive" alt="">
