--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     
 
-    <section class="no-padding bg-dark" id="portfolio">
+    <section class="no-padding bg-dark text-center" id="portfolio">
 <!--         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
