--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h1>Vincent Escueta</h1>
                     <h3>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h3>
-                    <hr class="light">
+                    <hr class="primary">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
                     <p class="text-faded">I am Vincent Escueta, a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
@@ -95,6 +95,7 @@
         </div> -->
         <div class="container-fluid">
             <h2 class="text-center">Portfolio</h2>
+            <hr class="primary">
             <h3 class="text-center">Animation</h3>
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
@@ -302,7 +303,8 @@
         </div>
     </section>
 
-
+    <hr class="primary">
+    
     <section class="bg-dark" id="contact">
         <div class="container">
             <div class="row">
