added resume to taskbar

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -303,7 +306,6 @@
         </div>
     </section>
 
-    <hr class="primary">
     
     <section class="bg-dark" id="contact">
         <div class="container">
