--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
 
 
 </body>
