--- a/index.html
+++ b/index.html
@@ -79,12 +79,16 @@
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h1>Vincent Escueta</h1>
+                    <h3>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h3>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
-                    <h1>Vincent Escueta</h1>
-                    <h3>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</h3>
                     <hr class="primary">
                     <p class="text-faded">I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
