--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     </section>
 
     
-    <section class="bg-dark" id="contact">
+    <section class="bg-primary" id="contact">
         <div class="container">
             <div class="row">
                 <div class="text-center">
