change cover photo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-6 col-sm-6 text-center">
-                            <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
+                            <img class="img-circle" src="img/ocean.JPG" height="288">
                         </div>
                         <div class="col-lg-6 col-sm-6 text-center">
                             <p class="text-faded">I am a Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. Some subject I love to study are Lighting in Animation and VFX, Computer Graphics, and Artificial Intelligence. My skills and projects are in my résumé and portfolio below. Outside of my work, I also enjoy photography, graphic design, video games, basketball, and bowling.</p>
