--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="call-to-action">
                 <h3>Résumé</h3>
                 <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Resume</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Download</a>
             </div>
         </div>
     </section>
