--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <header>
+<!--     <header>
         <div class="header-content">
             <div class="header-content-inner">
                 <div class="container">
@@ -87,12 +87,9 @@
                         </div>
                     </div>
                 </div>
-<!--                 <h1>Vincent Escueta</h1>
-                <hr>
-                <p>Software/Graphics Engineer<br/>Render Technical Assistant at Industrial Light & Magic<br/>B.S., EECS from the University of California, Berkeley, 2017</p> -->
             </div>
         </div>
-    </header>
+    </header> -->
 <!--     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
@@ -128,17 +125,17 @@
             </div>
         </div> -->
         <div class="container-fluid">
-            <h2 class="text-center">Portfolio</h2>
+<!--             <h2 class="text-center">Portfolio</h2> -->
             <hr class="primary">
-            <h3 class="text-center">Animation</h3>
+<!--             <h3 class="text-center">Animation</h3> -->
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 animation">
                     <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/rory.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation
+                                    Animation: Lighting
                                 </div>
                                 <div class="project-name">
                                     Stargazing (Warning: Links to a video)
@@ -147,13 +144,13 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 animation">
                     <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation
+                                    Animation: Cloth Simulation
                                 </div>
                                 <div class="project-name">
                                     The Generous Ghost (Warning: Links to a video)
@@ -163,7 +160,7 @@
                     </a>
                 </div>
             </div>
-            <h3 class="text-center">Technical</h3>
+<!--             <h3 class="text-center">Technical</h3> -->
             <div class="row no-gutter">
                  <div class="col-lg-4 col-sm-6">
                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link">
@@ -186,7 +183,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Image Manipulation and Computational Photography
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Image Warping and Mosaicing
@@ -201,7 +198,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Image Manipulation and Computational Photography
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection
@@ -216,7 +213,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Image Manipulation and Computational Photography
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
                                     Frequencies and Gradients
@@ -288,7 +285,7 @@
             </div>
             
             <div class="row no-gutter">
-                <h3 class="text-center">Photography<h3>
+<!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/images.jpg" class="img-responsive" alt="">
@@ -307,7 +304,7 @@
             </div>
                                                          
             <div class="row no-gutter">
-                <h3 class="text-center">Graphic Design </h3>
+<!--                 <h3 class="text-center">Graphic Design </h3> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="Others/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/images.jpg" class="img-responsive" alt="">
@@ -317,7 +314,7 @@
                                     Design
                                 </div>
                                 <div class="project-name">
-                                    Other Minor Projects</br> Images/GIFS of nametags, fliers, models, etc of other projects I worked on
+                                    University Catholic Conference of California Fliers, Nametags, etc.
                                 </div>
                             </div>
                         </div>
@@ -330,9 +327,9 @@
     <section class="bg-dark" id="resume">
         <div class="container text-center">
             <div class="call-to-action">
-                <h3>Résumé</h3>
-                <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Download</a>
+<!--                 <h3>Résumé</h3> -->
+<!--                 <hr class="primary"> -->
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
             </div>
         </div>
     </section>
